--- a/src/styles/PostPreviews.css
+++ b/src/styles/PostPreviews.css
@@ -1,6 +1,6 @@
 * {
   padding: 0;
-  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-family: sans-serif;
   margin: 0;
   line-height: 1.4rem;
 }
@@ -13,14 +13,23 @@
 .post-container {
   width: 100%;
   margin-bottom: 2rem;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 4px 4px 8px #9c9c9c;
+  border: 1px solid rgb(216, 216, 216);
 }
 
 .post-thumbnail-container {
   padding: 1.5rem;
 }
 
+.post-title {
+  color: #252525;
+  text-align: left;
+}
+
 .subreddit {
   padding-top: 1rem;
+  color: rgb(75, 74, 74)
 }
 
 .thumbnail {
@@ -29,20 +38,25 @@
 }
 
 .post-info-container {
-  background-color: grey;
   display: flex;
-  justify-content: space-between;
-  padding: 2rem 1rem 1rem;
+  padding: 1rem;
+  border-top: 2px solid #e4e4e4;
+  top: 50%;
+}
+
+.post-info-container > * {
+  flex-basis: 100%;
+  color:rgb(75, 74, 74)
 }
 
 .comment {
-  width: 1.5rem;
+  width: 1.8rem;
 }
 
-.upvote {
-  width: 1.5rem;
+.like {
+  width: 1.8rem;
 }
 
 .author {
-  align-self: flex-end;
+  align-self: center;
 }
