--- a/src/styles/PostPreviews.css
+++ b/src/styles/PostPreviews.css
@@ -1,10 +1,3 @@
-* {
-  padding: 0;
-  font-family: sans-serif;
-  margin: 0;
-  line-height: 1.4rem;
-}
-
 .posts-container {
   margin: auto;
   width: 30%;
@@ -16,6 +9,7 @@
   background-color: rgb(255, 255, 255);
   box-shadow: 4px 4px 8px #9c9c9c;
   border: 1px solid rgb(216, 216, 216);
+  padding: 0.5rem;
 }
 
 .post-thumbnail-container {
@@ -29,34 +23,36 @@
 
 .subreddit {
   padding-top: 1rem;
-  color: rgb(75, 74, 74)
+  color: rgb(75, 74, 74);
+  text-align: left;
 }
 
 .thumbnail {
-  max-width: 20rem;
+  width: 80%;
   padding-top: 2rem;
 }
 
 .post-info-container {
   display: flex;
-  padding: 1rem;
+  justify-content: space-between;
+  padding-top: 1rem;
   border-top: 2px solid #e4e4e4;
-  top: 50%;
 }
 
 .post-info-container > * {
+  color:rgb(75, 74, 74);
   flex-basis: 100%;
-  color:rgb(75, 74, 74)
 }
 
 .comment {
-  width: 1.8rem;
+  width: 1.6rem;
 }
 
 .like {
-  width: 1.8rem;
+  width: 1.6rem;
 }
 
 .author {
   align-self: center;
+  padding-right: 2rem;
 }
