--- a/src/styles/PostPreviews.css
+++ b/src/styles/PostPreviews.css
@@ -6,7 +6,7 @@
 .post-container {
   width: 100%;
   margin-bottom: 2rem;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   box-shadow: 4px 4px 8px #9c9c9c;
   border: 1px solid rgb(216, 216, 216);
   padding: 0.5rem;
