--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -5,7 +5,7 @@ header {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 2rem;
-  padding: 1rem;
+  padding: 1rem 3rem;
   box-shadow: 4px 4px 8px #9c9c9c;
 }
 
@@ -19,9 +19,14 @@ header > * {
 }
 
 .navigation > * {
+  text-align: right;
+}
+
+.navigation > * > * {
   display: inline-block;
   padding-left: 2rem;
   font-size: 20px;
+  padding-left: 4rem;
 }
 
 .logo {
