--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,12 +1,16 @@
 header {
   background-color: white;
   color: #252525;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 2rem;
-  padding: 1rem 3rem;
   box-shadow: 4px 4px 8px #9c9c9c;
+
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 100%;
+  padding: 1rem 3rem;
+  position: fixed;
+  box-sizing: border-box;
 }
 
 header > * {
@@ -18,18 +22,25 @@ header > * {
   vertical-align: middle;
 }
 
-.navigation > * {
+ul {
   text-align: right;
 }
 
-.navigation > * > * {
+li {
   display: inline-block;
   padding-left: 2rem;
   font-size: 20px;
   padding-left: 4rem;
 }
 
+li > * {
+  text-decoration: none;
+  color: #252525;
+  font-weight: 300;
+}
+
 .logo {
   padding-right: 1rem;
-  width: 2rem;
+  width: 239px;
+  height: 50px;
 }
