--- a/src/styles/PostPreviews.css
+++ b/src/styles/PostPreviews.css
@@ -1,7 +1,7 @@
 .posts-container {
   margin: auto;
-  width: 40%;
-  padding-top: 8rem;
+  width: 80%;
+  margin-top: 8rem;
 }
 
 .post-container {
